--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "redirects": [
     {
-      "source": "/percentuage.html",
-      "destination": "/percentage-calculator.html",
+      "source": "calcdomain.com/percentuage.html",
+      "destination": "calcdomain.com/percentage-calculator.html",
       "permanent": true
     }
   ]
