--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,15 @@
 {
+  "cleanUrls": true,
+  "trailingSlash": false,
   "redirects": [
     {
-      "source": "/:path((?!.*\\.).*)\\.html",
-      "destination": "/:path",
+      "source": "/index.html",
+      "destination": "/",
       "permanent": true
     },
     {
       "source": "/percentuage.html",
       "destination": "/percentage-calculator",
-      "permanent": true
-    },
-    {
-      "source": "/:path+/",
-      "destination": "/:path",
       "permanent": true
     }
   ]
