fixwithnew categories and sub

--- a/sito_modificato/vercel.json
+++ b/sito_modificato/vercel.json
@@ -11,6 +11,446 @@
       "source": "/percentuage.html",
       "destination": "/percentage-calculator",
       "permanent": true
+    },
+    {
+      "source": "/finance",
+      "destination": "/categories/finance",
+      "permanent": true
+    },
+    {
+      "source": "/finance",
+      "destination": "/categories/finance",
+      "permanent": true
+    },
+    {
+      "source": "/health-fitness",
+      "destination": "/categories/health-fitness",
+      "permanent": true
+    },
+    {
+      "source": "/health-fitness",
+      "destination": "/categories/health-fitness",
+      "permanent": true
+    },
+    {
+      "source": "/math",
+      "destination": "/categories/math",
+      "permanent": true
+    },
+    {
+      "source": "/math",
+      "destination": "/categories/math",
+      "permanent": true
+    },
+    {
+      "source": "/math-conversions",
+      "destination": "/categories/math-conversions",
+      "permanent": true
+    },
+    {
+      "source": "/math-conversions",
+      "destination": "/categories/math-conversions",
+      "permanent": true
+    },
+    {
+      "source": "/science",
+      "destination": "/categories/science",
+      "permanent": true
+    },
+    {
+      "source": "/science",
+      "destination": "/categories/science",
+      "permanent": true
+    },
+    {
+      "source": "/construction",
+      "destination": "/categories/construction",
+      "permanent": true
+    },
+    {
+      "source": "/construction",
+      "destination": "/categories/construction",
+      "permanent": true
+    },
+    {
+      "source": "/construction-diy",
+      "destination": "/categories/construction-diy",
+      "permanent": true
+    },
+    {
+      "source": "/construction-diy",
+      "destination": "/categories/construction-diy",
+      "permanent": true
+    },
+    {
+      "source": "/engineering",
+      "destination": "/categories/engineering",
+      "permanent": true
+    },
+    {
+      "source": "/engineering",
+      "destination": "/categories/engineering",
+      "permanent": true
+    },
+    {
+      "source": "/lifestyle-everyday",
+      "destination": "/categories/lifestyle-everyday",
+      "permanent": true
+    },
+    {
+      "source": "/lifestyle-everyday",
+      "destination": "/categories/lifestyle-everyday",
+      "permanent": true
+    },
+    {
+      "source": "/coordinate-converters",
+      "destination": "/categories/coordinate-converters",
+      "permanent": true
+    },
+    {
+      "source": "/coordinate-converters",
+      "destination": "/categories/coordinate-converters",
+      "permanent": true
+    },
+    {
+      "source": "/finance-business-ratios-and-valuation",
+      "destination": "/subcategories/finance-business-ratios-and-valuation",
+      "permanent": true
+    },
+    {
+      "source": "/finance-business-ratios-and-valuation",
+      "destination": "/subcategories/finance-business-ratios-and-valuation",
+      "permanent": true
+    },
+    {
+      "source": "/finance-canada-taxes",
+      "destination": "/subcategories/finance-canada-taxes",
+      "permanent": true
+    },
+    {
+      "source": "/finance-canada-taxes",
+      "destination": "/subcategories/finance-canada-taxes",
+      "permanent": true
+    },
+    {
+      "source": "/finance-company-planning-and-statements",
+      "destination": "/subcategories/finance-company-planning-and-statements",
+      "permanent": true
+    },
+    {
+      "source": "/finance-company-planning-and-statements",
+      "destination": "/subcategories/finance-company-planning-and-statements",
+      "permanent": true
+    },
+    {
+      "source": "/finance-income-and-payroll",
+      "destination": "/subcategories/finance-income-and-payroll",
+      "permanent": true
+    },
+    {
+      "source": "/finance-income-and-payroll",
+      "destination": "/subcategories/finance-income-and-payroll",
+      "permanent": true
+    },
+    {
+      "source": "/finance-international-personal",
+      "destination": "/subcategories/finance-international-personal",
+      "permanent": true
+    },
+    {
+      "source": "/finance-international-personal",
+      "destination": "/subcategories/finance-international-personal",
+      "permanent": true
+    },
+    {
+      "source": "/finance-investing-and-growth",
+      "destination": "/subcategories/finance-investing-and-growth",
+      "permanent": true
+    },
+    {
+      "source": "/finance-investing-and-growth",
+      "destination": "/subcategories/finance-investing-and-growth",
+      "permanent": true
+    },
+    {
+      "source": "/finance-loans-and-debt",
+      "destination": "/subcategories/finance-loans-and-debt",
+      "permanent": true
+    },
+    {
+      "source": "/finance-loans-and-debt",
+      "destination": "/subcategories/finance-loans-and-debt",
+      "permanent": true
+    },
+    {
+      "source": "/finance-mortgages-and-home",
+      "destination": "/subcategories/finance-mortgages-and-home",
+      "permanent": true
+    },
+    {
+      "source": "/finance-mortgages-and-home",
+      "destination": "/subcategories/finance-mortgages-and-home",
+      "permanent": true
+    },
+    {
+      "source": "/finance-real-estate-investing",
+      "destination": "/subcategories/finance-real-estate-investing",
+      "permanent": true
+    },
+    {
+      "source": "/finance-real-estate-investing",
+      "destination": "/subcategories/finance-real-estate-investing",
+      "permanent": true
+    },
+    {
+      "source": "/finance-retirement-and-pensions",
+      "destination": "/subcategories/finance-retirement-and-pensions",
+      "permanent": true
+    },
+    {
+      "source": "/finance-retirement-and-pensions",
+      "destination": "/subcategories/finance-retirement-and-pensions",
+      "permanent": true
+    },
+    {
+      "source": "/finance-stocks-options-and-trading",
+      "destination": "/subcategories/finance-stocks-options-and-trading",
+      "permanent": true
+    },
+    {
+      "source": "/finance-stocks-options-and-trading",
+      "destination": "/subcategories/finance-stocks-options-and-trading",
+      "permanent": true
+    },
+    {
+      "source": "/finance-uk-and-europe-taxes",
+      "destination": "/subcategories/finance-uk-and-europe-taxes",
+      "permanent": true
+    },
+    {
+      "source": "/finance-uk-and-europe-taxes",
+      "destination": "/subcategories/finance-uk-and-europe-taxes",
+      "permanent": true
+    },
+    {
+      "source": "/finance-us-state-and-local-taxes",
+      "destination": "/subcategories/finance-us-state-and-local-taxes",
+      "permanent": true
+    },
+    {
+      "source": "/finance-us-state-and-local-taxes",
+      "destination": "/subcategories/finance-us-state-and-local-taxes",
+      "permanent": true
+    },
+    {
+      "source": "/construction-advanced-construction-calculators",
+      "destination": "/subcategories/construction-advanced-construction-calculators",
+      "permanent": true
+    },
+    {
+      "source": "/construction-advanced-construction-calculators",
+      "destination": "/subcategories/construction-advanced-construction-calculators",
+      "permanent": true
+    },
+    {
+      "source": "/construction-concrete-mix-design-and-quality",
+      "destination": "/subcategories/construction-concrete-mix-design-and-quality",
+      "permanent": true
+    },
+    {
+      "source": "/construction-concrete-mix-design-and-quality",
+      "destination": "/subcategories/construction-concrete-mix-design-and-quality",
+      "permanent": true
+    },
+    {
+      "source": "/construction-concrete-quantities-and-masonry",
+      "destination": "/subcategories/construction-concrete-quantities-and-masonry",
+      "permanent": true
+    },
+    {
+      "source": "/construction-concrete-quantities-and-masonry",
+      "destination": "/subcategories/construction-concrete-quantities-and-masonry",
+      "permanent": true
+    },
+    {
+      "source": "/construction-cost-estimator",
+      "destination": "/subcategories/construction-cost-estimator",
+      "permanent": true
+    },
+    {
+      "source": "/construction-cost-estimator",
+      "destination": "/subcategories/construction-cost-estimator",
+      "permanent": true
+    },
+    {
+      "source": "/construction-framing-and-carpentry",
+      "destination": "/subcategories/construction-framing-and-carpentry",
+      "permanent": true
+    },
+    {
+      "source": "/construction-framing-and-carpentry",
+      "destination": "/subcategories/construction-framing-and-carpentry",
+      "permanent": true
+    },
+    {
+      "source": "/construction-interiors-envelope-and-finishes",
+      "destination": "/subcategories/construction-interiors-envelope-and-finishes",
+      "permanent": true
+    },
+    {
+      "source": "/construction-interiors-envelope-and-finishes",
+      "destination": "/subcategories/construction-interiors-envelope-and-finishes",
+      "permanent": true
+    },
+    {
+      "source": "/construction-planning-and-estimating",
+      "destination": "/subcategories/construction-planning-and-estimating",
+      "permanent": true
+    },
+    {
+      "source": "/construction-planning-and-estimating",
+      "destination": "/subcategories/construction-planning-and-estimating",
+      "permanent": true
+    },
+    {
+      "source": "/construction-roofing",
+      "destination": "/subcategories/construction-roofing",
+      "permanent": true
+    },
+    {
+      "source": "/construction-roofing",
+      "destination": "/subcategories/construction-roofing",
+      "permanent": true
+    },
+    {
+      "source": "/construction-sitework-aggregates-and-asphalt",
+      "destination": "/subcategories/construction-sitework-aggregates-and-asphalt",
+      "permanent": true
+    },
+    {
+      "source": "/construction-sitework-aggregates-and-asphalt",
+      "destination": "/subcategories/construction-sitework-aggregates-and-asphalt",
+      "permanent": true
+    },
+    {
+      "source": "/construction-structural-and-reinforcement",
+      "destination": "/subcategories/construction-structural-and-reinforcement",
+      "permanent": true
+    },
+    {
+      "source": "/construction-structural-and-reinforcement",
+      "destination": "/subcategories/construction-structural-and-reinforcement",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-0",
+      "destination": "/subcategories/engineering-eurocode-0",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-0",
+      "destination": "/subcategories/engineering-eurocode-0",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-1",
+      "destination": "/subcategories/engineering-eurocode-1",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-1",
+      "destination": "/subcategories/engineering-eurocode-1",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-2",
+      "destination": "/subcategories/engineering-eurocode-2",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-2",
+      "destination": "/subcategories/engineering-eurocode-2",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-3",
+      "destination": "/subcategories/engineering-eurocode-3",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-3",
+      "destination": "/subcategories/engineering-eurocode-3",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-4",
+      "destination": "/subcategories/engineering-eurocode-4",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-4",
+      "destination": "/subcategories/engineering-eurocode-4",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-5",
+      "destination": "/subcategories/engineering-eurocode-5",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-5",
+      "destination": "/subcategories/engineering-eurocode-5",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-6",
+      "destination": "/subcategories/engineering-eurocode-6",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-6",
+      "destination": "/subcategories/engineering-eurocode-6",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-7",
+      "destination": "/subcategories/engineering-eurocode-7",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-7",
+      "destination": "/subcategories/engineering-eurocode-7",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-8",
+      "destination": "/subcategories/engineering-eurocode-8",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-8",
+      "destination": "/subcategories/engineering-eurocode-8",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-9",
+      "destination": "/subcategories/engineering-eurocode-9",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-eurocode-9",
+      "destination": "/subcategories/engineering-eurocode-9",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-mechanical",
+      "destination": "/subcategories/engineering-mechanical",
+      "permanent": true
+    },
+    {
+      "source": "/engineering-mechanical",
+      "destination": "/subcategories/engineering-mechanical",
+      "permanent": true
     }
   ]
 }
