--- a/sito_modificato/vercel.json
+++ b/sito_modificato/vercel.json
@@ -451,6 +451,36 @@
       "source": "/engineering-mechanical",
       "destination": "/subcategories/engineering-mechanical",
       "permanent": true
+    },
+    {
+      "source": "/math-conversions-measurement-unit-conversions",
+      "destination": "/subcategories/math-conversions-measurement-unit-conversions",
+      "permanent": true
+    },
+    {
+      "source": "/math-conversions-measurement-unit-conversions.html",
+      "destination": "/subcategories/math-conversions-measurement-unit-conversions",
+      "permanent": true
+    },
+    {
+      "source": "/geometry",
+      "destination": "/subcategories/geometry",
+      "permanent": true
+    },
+    {
+      "source": "/geometry.html",
+      "destination": "/subcategories/geometry",
+      "permanent": true
+    },
+    {
+      "source": "/core-math-algebra",
+      "destination": "/subcategories/core-math-algebra",
+      "permanent": true
+    },
+    {
+      "source": "/core-math-algebra.html",
+      "destination": "/subcategories/core-math-algebra",
+      "permanent": true
     }
   ]
 }
