--- a/sito_modificato/vercel.json
+++ b/sito_modificato/vercel.json
@@ -34,12 +34,12 @@
     },
     {
       "source": "/math",
-      "destination": "/categories/math",
+      "destination": "/categories/math-conversions",
       "permanent": true
     },
     {
       "source": "/math",
-      "destination": "/categories/math",
+      "destination": "/categories/math-conversions",
       "permanent": true
     },
     {
