--- a/sito_modificato/vercel.json
+++ b/sito_modificato/vercel.json
@@ -13,6 +13,11 @@
       "permanent": true
     },
     {
+      "source": "/categories/math",
+      "destination": "/categories/math-conversions",
+      "permanent": true
+    },
+    {
       "source": "/finance",
       "destination": "/categories/finance",
       "permanent": true
