--- a/qa/qa-template-manifest.artifact.json
+++ b/qa/qa-template-manifest.artifact.json
@@ -1,12 +1,12 @@
 {
   "tool": "qa-template-manifest",
   "version": 1,
-  "buildStamp": "2026-02-05T01:15:15.411Z",
+  "buildStamp": "2026-02-05T17:29:54.549Z",
   "manifestPath": "qa/template-manifest.json",
   "effectiveEnv": {
     "QA_FAIL_FAST": "0",
     "QA_MAX_FILES": "",
-    "QA_ONLY_FILES": "sito_modificato/bike-cadence.html,sito_modificato/bike-gear.html,sito_modificato/bike-size.html,sito_modificato/bilirubin.html,sito_modificato/billiards-angle.html,sito_modificato/binary.html,sito_modificato/binding-energy.html,sito_modificato/binomial-distribution.html,sito_modificato/binomial-option-pricing.html,sito_modificato/bioreactor-design.html",
+    "QA_ONLY_FILES": "sito_modificato/concrete-slab-calculator.html,sito_modificato/concrete-slab.html,sito_modificato/concrete-strength.html,sito_modificato/cone-calculator.html,sito_modificato/cone-volume-calculator.html,sito_modificato/confidence-interval.html,sito_modificato/conic-classifier.html,sito_modificato/connecticut-income-tax.html,sito_modificato/consolidation-settlement.html,sito_modificato/construction-delay-analysis.html",
     "QA_ARTIFACT_PATH": "",
     "QA_BUILD_STAMP": ""
   },
