--- a/qa/qa-template-manifest.artifact.json
+++ b/qa/qa-template-manifest.artifact.json
@@ -1,12 +1,12 @@
 {
   "tool": "qa-template-manifest",
   "version": 1,
-  "buildStamp": "2026-02-05T17:29:54.549Z",
+  "buildStamp": "2026-02-05T18:31:30.955Z",
   "manifestPath": "qa/template-manifest.json",
   "effectiveEnv": {
     "QA_FAIL_FAST": "0",
     "QA_MAX_FILES": "",
-    "QA_ONLY_FILES": "sito_modificato/concrete-slab-calculator.html,sito_modificato/concrete-slab.html,sito_modificato/concrete-strength.html,sito_modificato/cone-calculator.html,sito_modificato/cone-volume-calculator.html,sito_modificato/confidence-interval.html,sito_modificato/conic-classifier.html,sito_modificato/connecticut-income-tax.html,sito_modificato/consolidation-settlement.html,sito_modificato/construction-delay-analysis.html",
+    "QA_ONLY_FILES": "sito_modificato/crop-evapotranspiration.html,sito_modificato/crop-yield.html,sito_modificato/cross-correlation.html,sito_modificato/cross-product.html,sito_modificato/cross-stitch-calculator.html,sito_modificato/crossword-solver.html,sito_modificato/crystallizer-design.html,sito_modificato/ctr.html,sito_modificato/cube-calculator.html,sito_modificato/cubic-feet-to-gallons.html",
     "QA_ARTIFACT_PATH": "",
     "QA_BUILD_STAMP": ""
   },
