--- a/qa/qa-template-manifest.artifact.json
+++ b/qa/qa-template-manifest.artifact.json
@@ -1,12 +1,12 @@
 {
   "tool": "qa-template-manifest",
   "version": 1,
-  "buildStamp": "2026-02-05T18:31:30.955Z",
+  "buildStamp": "2026-02-06T17:58:50.559Z",
   "manifestPath": "qa/template-manifest.json",
   "effectiveEnv": {
     "QA_FAIL_FAST": "0",
     "QA_MAX_FILES": "",
-    "QA_ONLY_FILES": "sito_modificato/crop-evapotranspiration.html,sito_modificato/crop-yield.html,sito_modificato/cross-correlation.html,sito_modificato/cross-product.html,sito_modificato/cross-stitch-calculator.html,sito_modificato/crossword-solver.html,sito_modificato/crystallizer-design.html,sito_modificato/ctr.html,sito_modificato/cube-calculator.html,sito_modificato/cubic-feet-to-gallons.html",
+    "QA_ONLY_FILES": "sito_modificato/furniture-layout-calculator.html,sito_modificato/future-value-of-annuity.html,sito_modificato/future-value.html,sito_modificato/g-test.html,sito_modificato/gaa.html,sito_modificato/gabion-wall-design.html,sito_modificato/gacha.html,sito_modificato/gallons-to-liters.html,sito_modificato/game-theory.html,sito_modificato/gardening-calculator.html",
     "QA_ARTIFACT_PATH": "",
     "QA_BUILD_STAMP": ""
   },
