--- a/qa/qa-template-manifest.artifact.json
+++ b/qa/qa-template-manifest.artifact.json
@@ -1,12 +1,12 @@
 {
   "tool": "qa-template-manifest",
   "version": 1,
-  "buildStamp": "2026-02-06T17:58:50.559Z",
+  "buildStamp": "2026-02-06T19:00:08.253Z",
   "manifestPath": "qa/template-manifest.json",
   "effectiveEnv": {
     "QA_FAIL_FAST": "0",
     "QA_MAX_FILES": "",
-    "QA_ONLY_FILES": "sito_modificato/furniture-layout-calculator.html,sito_modificato/future-value-of-annuity.html,sito_modificato/future-value.html,sito_modificato/g-test.html,sito_modificato/gaa.html,sito_modificato/gabion-wall-design.html,sito_modificato/gacha.html,sito_modificato/gallons-to-liters.html,sito_modificato/game-theory.html,sito_modificato/gardening-calculator.html",
+    "QA_ONLY_FILES": "sito_modificato/has-bled-score.html,sito_modificato/hash-generator.html,sito_modificato/hawaii-income-tax.html,sito_modificato/hazen-williams.html,sito_modificato/heart-rate-calculator.html,sito_modificato/heart-score.html,sito_modificato/heat-index.html,sito_modificato/heat-loss.html,sito_modificato/heat-transfer.html,sito_modificato/hectares-to-acres.html",
     "QA_ARTIFACT_PATH": "",
     "QA_BUILD_STAMP": ""
   },
