--- a/qa/qa-template-manifest.artifact.json
+++ b/qa/qa-template-manifest.artifact.json
@@ -1,21 +1,27 @@
 {
   "tool": "qa-template-manifest",
   "version": 1,
-  "buildStamp": "2026-02-07T18:23:35.054Z",
+  "buildStamp": "2026-02-07T18:45:52.756Z",
   "manifestPath": "qa/template-manifest.json",
   "effectiveEnv": {
     "QA_FAIL_FAST": "0",
     "QA_MAX_FILES": "",
-    "QA_ONLY_FILES": "sito_modificato/learning-curve.html,sito_modificato/lease-vs-buy-car.html,sito_modificato/lease-vs-buy-equipment.html,sito_modificato/led-resistor.html,sito_modificato/length-contraction.html,sito_modificato/length-converter.html,sito_modificato/lensmaker-s-equation.html,sito_modificato/leveling.html,sito_modificato/levenes-test.html,sito_modificato/life-and-earth-sciences.html",
+    "QA_ONLY_FILES": "sito_modificato/life-expectancy.html,sito_modificato/life-insurance-needs.html,sito_modificato/life-table.html,sito_modificato/lift-coefficient.html,sito_modificato/ligation.html,sito_modificato/light-gauge-steel-design.html,sito_modificato/light-years-to-miles.html,sito_modificato/lights-criteria.html,sito_modificato/likelihood-ratio.html,sito_modificato/limit.html",
     "QA_ARTIFACT_PATH": "",
     "QA_BUILD_STAMP": ""
   },
   "totals": {
-    "total": 11,
+    "total": 12,
     "passed": 11,
-    "failed": 0,
+    "failed": 1,
     "skippedMissing": 0
   },
-  "failures": [],
+  "failures": [
+    {
+      "pageId": "limit",
+      "path": "sito_modificato/limit.html",
+      "msg": "[limit] sito_modificato/limit.html: forbidden string literal \"NaN\" found in source."
+    }
+  ],
   "skipped": []
 }
