--- a/qa/qa-template-manifest.artifact.json
+++ b/qa/qa-template-manifest.artifact.json
@@ -1,26 +1,56 @@
 {
   "tool": "qa-template-manifest",
   "version": 1,
-  "buildStamp": "2026-02-07T18:45:52.756Z",
+  "buildStamp": "2026-02-07T19:17:41.501Z",
   "manifestPath": "qa/template-manifest.json",
   "effectiveEnv": {
     "QA_FAIL_FAST": "0",
     "QA_MAX_FILES": "",
-    "QA_ONLY_FILES": "sito_modificato/life-expectancy.html,sito_modificato/life-insurance-needs.html,sito_modificato/life-table.html,sito_modificato/lift-coefficient.html,sito_modificato/ligation.html,sito_modificato/light-gauge-steel-design.html,sito_modificato/light-years-to-miles.html,sito_modificato/lights-criteria.html,sito_modificato/likelihood-ratio.html,sito_modificato/limit.html",
+    "QA_ONLY_FILES": "sito_modificato/live-load.html,sito_modificato/lmtd.html,sito_modificato/load-balancing-simulator.html,sito_modificato/loading-dose.html,sito_modificato/loan-amortization-calculator.html,sito_modificato/loan-amortization.html,sito_modificato/loan-comparison-calculator.html,sito_modificato/loan-comparison.html,sito_modificato/loan-payment-formula.html,sito_modificato/loan-payoff.html",
     "QA_ARTIFACT_PATH": "",
     "QA_BUILD_STAMP": ""
   },
   "totals": {
-    "total": 12,
+    "total": 18,
     "passed": 11,
-    "failed": 1,
+    "failed": 7,
     "skippedMissing": 0
   },
   "failures": [
     {
-      "pageId": "limit",
-      "path": "sito_modificato/limit.html",
-      "msg": "[limit] sito_modificato/limit.html: forbidden string literal \"NaN\" found in source."
+      "pageId": "loan-amortization-calculator",
+      "path": "sito_modificato/loan-amortization-calculator.html",
+      "msg": "[loan-amortization-calculator] sito_modificato/loan-amortization-calculator.html: scheduleWrap must appear after calcHero and before howToUse (DOM order)."
+    },
+    {
+      "pageId": "loan-amortization-calculator",
+      "path": "sito_modificato/loan-amortization-calculator.html",
+      "msg": "[loan-amortization-calculator] sito_modificato/loan-amortization-calculator.html (schedule): ID \"scheduleBody\" must exist exactly once; found 3."
+    },
+    {
+      "pageId": "loan-amortization",
+      "path": "sito_modificato/loan-amortization.html",
+      "msg": "[loan-amortization] sito_modificato/loan-amortization.html: scheduleWrap must appear after calcHero and before howToUse (DOM order)."
+    },
+    {
+      "pageId": "loan-amortization",
+      "path": "sito_modificato/loan-amortization.html",
+      "msg": "[loan-amortization] sito_modificato/loan-amortization.html (schedule): ID \"scheduleBody\" must exist exactly once; found 3."
+    },
+    {
+      "pageId": "loan-comparison-calculator",
+      "path": "sito_modificato/loan-comparison-calculator.html",
+      "msg": "[loan-comparison-calculator] sito_modificato/loan-comparison-calculator.html (schedule): ID \"scheduleBody\" must exist exactly once; found 3."
+    },
+    {
+      "pageId": "loan-payoff",
+      "path": "sito_modificato/loan-payoff.html",
+      "msg": "[loan-payoff] sito_modificato/loan-payoff.html: scheduleWrap must appear after calcHero and before howToUse (DOM order)."
+    },
+    {
+      "pageId": "loan-payoff",
+      "path": "sito_modificato/loan-payoff.html",
+      "msg": "[loan-payoff] sito_modificato/loan-payoff.html (schedule): ID \"scheduleBody\" must exist exactly once; found 3."
     }
   ],
   "skipped": []
