--- a/qa/qa-template-manifest.artifact.json
+++ b/qa/qa-template-manifest.artifact.json
@@ -1,7 +1,7 @@
 {
   "tool": "qa-template-manifest",
   "version": 1,
-  "buildStamp": "2026-02-08T04:33:22.793Z",
+  "buildStamp": "2026-02-10T06:28:46.271Z",
   "manifestPath": "qa/template-manifest.json",
   "effectiveEnv": {
     "QA_FAIL_FAST": "0",
@@ -11,36 +11,41 @@
     "QA_BUILD_STAMP": ""
   },
   "totals": {
-    "total": 16,
+    "total": 17,
     "passed": 11,
-    "failed": 5,
+    "failed": 6,
     "skippedMissing": 0
   },
   "failures": [
     {
-      "pageId": "loan-amortization",
-      "path": "sito_modificato/loan-amortization.html",
-      "msg": "[loan-amortization] sito_modificato/loan-amortization.html: scheduleWrap must appear after calcHero and before howToUse (DOM order)."
+      "pageId": "mortgage-payment",
+      "path": "sito_modificato/mortgage-payment.html",
+      "msg": "[mortgage-payment] sito_modificato/mortgage-payment.html: Missing required anchor id=\"pageTitle\" (DOM order check)."
     },
     {
-      "pageId": "loan-amortization",
-      "path": "sito_modificato/loan-amortization.html",
-      "msg": "[loan-amortization] sito_modificato/loan-amortization.html (schedule): ID \"scheduleBody\" must exist exactly once; found 3."
+      "pageId": "mortgage-payment",
+      "path": "sito_modificato/mortgage-payment.html",
+      "msg": "[mortgage-payment] sito_modificato/mortgage-payment.html: ID \"pageTitle\" must exist exactly once; found 0."
     },
     {
-      "pageId": "loan-comparison-calculator",
-      "path": "sito_modificato/loan-comparison-calculator.html",
-      "msg": "[loan-comparison-calculator] sito_modificato/loan-comparison-calculator.html (schedule): ID \"scheduleBody\" must exist exactly once; found 3."
+      "pageId": "mortgage-payment",
+      "path": "sito_modificato/mortgage-payment.html",
+      "msg": "[mortgage-payment] sito_modificato/mortgage-payment.html: Required class \".alert\" not found."
     },
     {
-      "pageId": "loan-payoff",
-      "path": "sito_modificato/loan-payoff.html",
-      "msg": "[loan-payoff] sito_modificato/loan-payoff.html: scheduleWrap must appear after calcHero and before howToUse (DOM order)."
+      "pageId": "mortgage-payment",
+      "path": "sito_modificato/mortgage-payment.html",
+      "msg": "[mortgage-payment] sito_modificato/mortgage-payment.html (schedule): ID \"scheduleWrap\" must exist exactly once; found 2."
     },
     {
-      "pageId": "loan-payoff",
-      "path": "sito_modificato/loan-payoff.html",
-      "msg": "[loan-payoff] sito_modificato/loan-payoff.html (schedule): ID \"scheduleBody\" must exist exactly once; found 3."
+      "pageId": "mortgage-payment",
+      "path": "sito_modificato/mortgage-payment.html",
+      "msg": "[mortgage-payment] sito_modificato/mortgage-payment.html (csv): ID \"downloadCsv\" must exist exactly once; found 2."
+    },
+    {
+      "pageId": "mortgage-payment",
+      "path": "sito_modificato/mortgage-payment.html",
+      "msg": "[mortgage-payment] sito_modificato/mortgage-payment.html: update() exists but debounced update pattern not found."
     }
   ],
   "skipped": []
