--- a/qa/qa-template-manifest.artifact.json
+++ b/qa/qa-template-manifest.artifact.json
@@ -1,18 +1,18 @@
 {
   "tool": "qa-template-manifest",
   "version": 1,
-  "buildStamp": "2026-02-10T21:13:25.153Z",
+  "buildStamp": "2026-02-10T21:26:55.619Z",
   "manifestPath": "qa/template-manifest.json",
   "effectiveEnv": {
     "QA_FAIL_FAST": "0",
     "QA_MAX_FILES": "",
-    "QA_ONLY_FILES": "sito_modificato/luhn-algorithm.html,sito_modificato/lumber-calculator.html,sito_modificato/lumens-to-watts.html,sito_modificato/luminosity.html,sito_modificato/lumpsum-calculator.html,sito_modificato/lye.html,sito_modificato/m-a-model-calculator.html,sito_modificato/mac-address-generator.html,sito_modificato/macd.html,sito_modificato/mach-to-mph.html",
+    "QA_ONLY_FILES": "sito_modificato/auto-lease.html",
     "QA_ARTIFACT_PATH": "",
     "QA_BUILD_STAMP": ""
   },
   "totals": {
-    "total": 11,
-    "passed": 11,
+    "total": 2,
+    "passed": 2,
     "failed": 0,
     "skippedMissing": 0
   },
