--- a/qa/qa-template-manifest.artifact.json
+++ b/qa/qa-template-manifest.artifact.json
@@ -1,21 +1,27 @@
 {
   "tool": "qa-template-manifest",
   "version": 1,
-  "buildStamp": "2026-02-11T18:42:28.819Z",
+  "buildStamp": "2026-02-11T20:01:14.988Z",
   "manifestPath": "qa/template-manifest.json",
   "effectiveEnv": {
     "QA_FAIL_FAST": "0",
     "QA_MAX_FILES": "",
-    "QA_ONLY_FILES": "sito_modificato/bearing.html",
+    "QA_ONLY_FILES": "sito_modificato/belt-drive-design.html",
     "QA_ARTIFACT_PATH": "",
     "QA_BUILD_STAMP": ""
   },
   "totals": {
-    "total": 2,
+    "total": 3,
     "passed": 2,
-    "failed": 0,
+    "failed": 1,
     "skippedMissing": 0
   },
-  "failures": [],
+  "failures": [
+    {
+      "pageId": "belt-drive-design",
+      "path": "sito_modificato/belt-drive-design.html",
+      "msg": "[belt-drive-design] sito_modificato/belt-drive-design.html: update() exists but debounced update pattern not found."
+    }
+  ],
   "skipped": []
 }
